@@ -1,10 +1,7 @@
 bin/make-noise
 Changes
 cpl1.0.txt
-ex/complex.jpg
-ex/perlin.jpg
-ex/square.jpg
-ex/white.jpg
+ex/make-samples
 INSTALL
 lib/Acme/Noisemaker.pm
 Makefile.PL
